2005-10-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* stepmake/stepmake/python-module-rules.make
	($(outdir)/%$(SHARED_MODULE_SUFFIX)): put flags after files.

2005-10-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/ps-to-png.scm (make-ps-images): backport: make PS images
	without globbing. 

2005-10-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/file-name.cc (dos_to_posix)[__CYGWIN__]: Return
	unconverted value if cygwin_conv_to_posix_path () fails.  Fixes
	absolute file name bug.

2005-09-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ly/engraver-init.ly (AncientRemoveEmptyStaffContext): remove
	Slur/hammer hack

2005-09-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/instrument-notation.itely (Entering lyrics):
	Multiple latin-1->utf-8 conversion fix.

	* Documentation/user/*tely: Update Emacs cookie to utf-8.

2005-09-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/output-ps.scm (grob-cause): escape spaces in URLs.

2005-08-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/ly-module.cc (make_stand_in_procs_weak): backport: compat
	bugfix for GUILE 1.6.4.

2005-08-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (get_latex_textwidth): bugfix for splitext().

2005-08-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: Include MY_PATCH_LEVEL in config.make's
	VERSION.

2005-08-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (get_latex_textwidth): remove unixisms

2005-08-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-markup-commands.scm (null): add  null markup.

2005-08-24  Graham Percival  <gpermus@gmail.com>

	* ly/bagpipe.ly: Backport.

	* Documentation/user/ {various}: backport doc updates,
	excluding stuff for new features in 2.7.

2005-08-16  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/lilypond-book.py (option_definitions): Don't localize
	the empty string. Fixes bug when --psfonts was used with
	non-English locale.
